# dictionary_trainer

./: pyproject.toml
