[tool.poetry]
name = "my_dictionary_trainer"
version = "0.1.0"
description = "simple pet project"
authors = ["Fire Starter <antonpaly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
flake8-awesome = "^1.2.1"
pylint = "^2.5.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
